# agentic-invest

./: .gitignore  LICENSE  README.md  data_fetcher.py  main.py  plot_backtest.py  program.md  pyproject.toml  results.tsv  strategy.py
